## Changelog

### 1.2.0
* Dev - Code Standards updates
* Dev - Added in a fallback API for exchange rates.
* Dev - Namespacing and instances for all classes.
* Dev - Added in an option to convert all multiple currencies to your base currency on the frontend.
* Dev - Added in a shortcode - [lsx_currency_value value="500"]
* Dev - Added in the option to strip the decimal places from the values.

### 1.1.2 
* Dev - Added in WooCommerce integration
* Dev - add noopener noreferrer tags to target="_blank" links
* Dev - Adding the travis and codesniffer ruleset
* Dev - Adding a readme.txt and updating the readme.md

### 1.1.1
* Dev - Added compatibility with LSX Videos
* Dev - Added compatibility with LSX Search
* Tweak - Move UIX settings (visual tab) to WP Customizer

### 1.1.0
* Added compatibility with LSX 2.0
* Dev - New project structure
* Dev - UIX copied from TO 1.1 + Fixed issue with sub tabs click (settings)
* Fix - Fixing the settings integration with the Tour Operator Plugin
* Fix - Fixed scripts/styles loading order
* Fix - Fixed small issues

### 1.0.4
* Dev - Added in a transient call to cache the Rates from the exchange API
* Fix - Restricted the API calls to the frontend only reducing the number of queries.

### 1.0.3
* Fix - Adjusted the plugin settings link inside the LSX API Class

### 1.0.2
* Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)

### 1.0.1
* Fix - Reduced the access to server (check API key status) using transients
* Fix - Made the API URLs dev/live dynamic using a prefix "dev-" in the API KEY

### 1.0.0
* First Version